--- a/index.ipynb
+++ b/index.ipynb
@@ -374,18 +374,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "item at Index 1at Index 1\n",
-      "item at Index 3at Index 3\n",
-      "item at Index 5at Index 5\n",
-      "item at Index 7at Index 7\n",
-      "item at Index 9at Index 9\n"
+      "item at Index 11\n",
+      "item at Index 33\n",
+      "item at Index 55\n",
+      "item at Index 77\n",
+      "item at Index 99\n"
      ]
     },
     {
@@ -394,7 +394,7 @@
        "[1, 3, 5, 7, 9]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
     "\n",
     "# Write your code above this line\n",
     "\n",
-    "odds\n",
+    "\n",
     "# Expected Output: \n",
     "# ['item at Index 1',\n",
     "#  'item at Index 3',\n",
