--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,7 @@
     "\n",
     "# Complete the line below so that the first loop variable is the called index,\n",
     "# and the second loop variable is the tuple (countryname, population)  \n",
-    "for index, (countrynam,value2) in enumerate(grouped_df):\n",
+    "for index, (countryname,population) in enumerate(grouped_df):\n",
     "    \n",
     "    # Get the unique subplot where the plot we're creating during this iteration\n",
     "    # of the loop will live. Our subplot will be 30 rows of 9 plots each  \n",
@@ -490,7 +490,7 @@
     "    population.plot(x='Year', y='Population', ax=ax, legend=False)\n",
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
-    "    ax.set_title(value1)"
+    "    ax.set_title(vae1)"
    ]
   },
   {
